OTP and login and signup and profile and admin panel fixed

--- a/.env.local
+++ b/.env.local
@@ -11,3 +11,7 @@ NEXTAUTH_SECRET=your-secret-key-here
 # Optional: External API keys
 # STRIPE_SECRET_KEY=your-stripe-secret-key
 # STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+
+# Gmail credentials for OTP
+GMAIL_USER=cronixglobal@gmail.com
+GMAIL_PASS=yuxccskftnmpqtub
