Fixed Auth Error and Dashbaord SQLite Connection

--- a/.env.local
+++ b/.env.local
@@ -15,3 +15,6 @@ NEXTAUTH_SECRET=your-secret-key-here
 # Gmail credentials for OTP
 GMAIL_USER=cronixglobal@gmail.com
 GMAIL_PASS=yuxccskftnmpqtub
+
+# JWT Secret for session management (keep this secret!)
+JWT_SECRET=your-super-secret-jwt-key-for-quickcourt-sessions-2024-secure-auth-system
